# python-sql-lisfy

./: README.md  pyproject.toml
src/sql_lisfy/: __main__.py  lexer.py  parser.py  parser_subr.py  rep.py  types.py
src/sql_lisfy/parsers/: __init__.py
src/sql_lisfy/parsers/create/: __init__.py  table.py
src/sql_lisfy/parsers/select/: __init__.py  index_.py
src/sql_lisfy/subr/: __init__.py  reader.py  subr.py
