[tool.poetry]
name = "sql-lisfy"
version = "0.1.0"
description = ""
authors = ["Naoya Yamashita <conao3@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.scripts]
sql-lisfy = "sql_lisfy.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0.2"
more-itertools = "^9.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
